<resources>
    <string name="app_name">移动相机</string>
    <string name="createGroup">建组</string>
    <string name="deleteGroup">删组</string>
    <string name="capture">拍照</string>
    <string name="camera_rationale">本APP运行必须取得相机控制权限</string>
    <string name="systemSetting">设置</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_codec">视频编码</string>

    <string name="pref_title_mime_select">视频传送编码格式</string>
    <string-array name="pref_mime_list_titles">
        <item>H264</item>
        <item>H265</item>
    </string-array>
    <string-array name="pref_mime_list_values">
        <item>video/avc</item>
        <item>video/hevc</item>
    </string-array>

    <string name="pref_title_size_select">分辨率</string>
    <string-array name="pref_size_list_titles">
        <item>320x240</item>
        <item>640x480</item>
        <item>800x600</item>
        <item>960x720</item>
        <item>1280x720</item>
        <item>1440x1080</item>
        <item>1920x1080</item>
        <item>1920x1440</item>
    </string-array>
    <string-array name="pref_size_list_values">
        <item>320x240</item>
        <item>640x480</item>
        <item>800x600</item>
        <item>960x720</item>
        <item>1280x720</item>
        <item>1440x1080</item>
        <item>1920x1080</item>
        <item>1920x1440</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_wifi">WIFI</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_camera">相机</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
