<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.wxson.mobilecamera.activity.SettingsActivity$CodecPreferenceFragment"
        android:icon="@drawable/ic_video_codec"
        android:title="@string/pref_header_codec" />

    <header
        android:fragment="com.wxson.mobilecamera.activity.SettingsActivity$CameraPreferenceFragment"
        android:icon="@drawable/ic_camera"
        android:title="@string/pref_header_camera" />

    <header
        android:fragment="com.wxson.mobilecamera.activity.SettingsActivity$WifiPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_wifi" />

</preference-headers>
